# bevy-jam-3

./: Cargo.toml
assets/shaders/: crosshatch_fragment_prepass.wgsl  crosshatch_material.wgsl  post_process_pass.wgsl
assets/shaders/utils/: light.wgsl  noise.wgsl  random.wgsl
src/: main.rs
src/vfx/: crosshatch_material.rs  mod.rs  utils.rs
src/vfx/post_process/: mod.rs  post_process_node.rs  post_process_pipeline.rs  post_process_settings.rs
