[package]
name = "bevy-jam-3"
version = "0.1.0"
edition = "2021"

[dependencies]
smooth-bevy-cameras = "0.8.0"

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    "bevy_asset", 			# Assets management
    "bevy_audio", 			# Builtin audio
    "bevy_winit", 			# Window management

    "bevy_render", 			# Rendering framework core
    "bevy_core_pipeline", 	# Common rendering abstractions
    "bevy_pbr", 			# 3D PBR Rendering
    "bevy_sprite", 			# 2D (sprites) rendering
    "bevy_text",            # Bevy UI Text
    "bevy_ui",              # Bevy UI

    "subpixel_glyph_atlas", # Sub-pixel font rendering
    "filesystem_watcher",   # Watch files for asset hot-reloading
    "dynamic_linking",      # Faster recompiles
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

### WASM

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
